Fixed mobile view to fit better for about me and projects. Nav bar moves to the top on smaller screens.

--- a/about.css
+++ b/about.css
@@ -56,6 +56,7 @@ span {
 
   .profile {
       display: block;
+      margin-top: 120px;
       margin-left: auto;
       margin-right: auto;
       height: 400px;
