--- a/projects.css
+++ b/projects.css
@@ -56,7 +56,8 @@ a {
         padding-top: 75px;
     }
     .image {
-        display: flex;
         margin: auto;
+        margin-top: 75px;
+        display: flex;
     }
   }
