--- a/sidebar.css
+++ b/sidebar.css
@@ -28,6 +28,21 @@
       color: #818181;
   }
 
+  @media only screen and (max-width: 1000px) {
+    body {
+      padding-left: 0px;
+  }
 
-
- 
+  .sidebar {
+      height: 75px;
+      width: 100%;
+      display: flex;
+      position: fixed;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      background-color: rgb(12, 14, 39);
+      overflow-x: hidden;
+      padding-top: 16px;
+  } 
+  } 
